menambahkan fungsionalitas add merch

--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -86,7 +86,9 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/komentar/halaman">Berikan Komentar</a>
+                        <a class="nav-link text-white" href="/helpdesk">
+                            <i class="fas fa-headset"></i> Helpdesk
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/merch">
@@ -98,6 +100,8 @@
                             <i class="fas fa-search"></i> Cari Kelompok
                         </a>
                     </li>
+                    <!-- Tambahkan setelah menu "Cari Kelompok" di navbar -->
+
                 </ul>
             </div>
         </div>
