--- a/src/main/resources/templates/form-cari-detail-kelompok.html
+++ b/src/main/resources/templates/form-cari-detail-kelompok.html
@@ -8,7 +8,7 @@
         <div class="container">
         <div class="card">
             <h2><i class="fas fa-search icon"></i> Cari Detail Kelompok</h2>
-            <form action="kelompok/detail-kelompok" method="GET">
+            <form action="detail-kelompok" method="GET">
                 <div class="mb-3">
                     <label for="npm" class="form-label">NPM Mahasiswa</label>
                     <input type="text" class="form-control" id="npm" name="npm" required>
